packages format refactored

--- a/ArugamBayBeach.html
+++ b/ArugamBayBeach.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArugamBay Beach</title>
     <link rel="stylesheet" href="/css/ArugamBayBeach.css">
-    <link rel="icon" href="assest/beach.png">
+    <link rel="icon" href="assest/icons/beach.png">
 </head>
     <div id="ArugamBayBeach">
         <h1 class="title">ArugamBay Beach</h1>
-        <img src="assest/ArugambayBeachCover.jpg" class="img-arugambay" >
+        <img src="assest/images/ArugambayBeachCover.jpg" class="img-arugambay" >
     
         <p class="des-aru">rugam Bay Beach is situated on the <mark>southeastern coast</mark>  of Sri Lanka, in the town of Arugam Bay, which falls under the <u>Pottuvil division</u>  of the  <u>Ampara district</u>. It is nestled along the Indian Ocean shoreline, approximately <b>320 kilometers east of Colombo, the capital city of Sri Lanka.</b> </p>
         <br>
@@ -23,24 +23,7 @@
         </p>
     </div>
    <div>
-    <style>
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            border: 2px solid;
-            margin-left: 10%;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid black;
-            border-right: 1px solid
-        }
-        th {
-            background-color: lightblue;
-        }
-    </style>
-
+    
     <table>
         <tr>
             <th>Category</th>
