--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celon View</title>
     <link rel="stylesheet" href="/css/Home.css">
-    <link rel="icon" href="assest/icons8-sri-lanka-48.png">
+    <link rel="icon" href="assest/icons/icons8-sri-lanka-48.png">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/assest/CeylonViewLogo.png" class="logo">
+                <img src="/assest/icons/CeylonViewLogo.png" class="logo">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#About">About</a></li>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/assest/AboutPageCover.jpg">    
+                    <img src="/assest/images/AboutPageCover.jpg">    
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
