--- a/Mirissa.html
+++ b/Mirissa.html
@@ -11,33 +11,13 @@
     <div id="Mirissa">
         <div class="Heading">
             <h1 class="title 2">Mirissa</h1>
-            <img src="assest/mirissa Cover.jpg" class="img-mirissa">
+            <img src="assest/images/mirissa Cover.jpg" class="img-mirissa">
 
             <p>irissa, nestled along the <b>southern coast</b> of Sri Lanka, is a tranquil coastal town renowned for its <i>stunning beaches, vibrant atmosphere, and diverse marine life</i>. With its palm-fringed shores, turquoise waters, and golden sands, Mirissa attracts travelers seeking relaxation and adventure alike. The town's laid-back ambiance and picturesque surroundings make it an ideal destination for beach lovers, sun-seekers, and surf enthusiasts. Mirissa Beach, the main stretch of coastline, offers opportunities for swimming, sunbathing, and beachside dining, while nearby Weligama Bay is famous for its excellent surfing conditions, attracting surfers from around the globe. Mirissa is also a hotspot for whale and <mark>dolphin watching</mark>  with boat excursions available for visitors to witness these magnificent marine creatures in their natural habitat. Beyond its beaches, Mirissa boasts a vibrant culinary scene, with <mark>seafood shacks</mark> , <mark>beachside cafes</mark> , and restaurants serving <u>fresh seafood delicacies and traditional Sri Lankan cuisine</u> . As the sun sets over the Indian Ocean, Mirissa transforms into a lively hub of nightlife, with beach parties, live music, and bonfires adding to the town's allure. Whether basking in the sun, exploring underwater wonders, or savoring local flavors, Mirissa offers an unforgettable coastal experience that captivates the senses and leaves a lasting impression on all who visit.
             </p>
         </div>
         <div>
-            <style>
-                table {
-                     width: 80%;
-                    border-collapse: collapse;
-                    border: 2px solid;
-                    margin-left: 10%;
-                    margin-top: 5%;
-                    font-size: large;
-                }
-
-                th, td {
-                     padding: 8px;
-                     text-align: left;
-                     border-bottom: 1px solid black;
-                     border-right: 1px solid
-                 }
-
-                 th {
-                     background-color: lightblue;
-                }
-            </style>
+            
 
 <table>
     <tr>
