--- a/Sinharaja.html
+++ b/Sinharaja.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinharaja Rain Forest</title>
     <link rel="stylesheet" href="/css/Sinharaja.css">
-    <link rel="icon" href="assest/icons8-forest-50.png">
+    <link rel="icon" href="assest/icons/icons8-forest-50.png">
 </head>
 <body>
     <div id="SinharajaRainForest">
         <div class="Heading">
             <h1 class="title 2">Sinharaja Rain Forest</h1>
-            <img src="/assest/SinharajaCoverCollage.jpg" class="img-sinharaja">
+            <img src="/assest/images/Sinharaja_Rain_Forest.jpg" class="img-sinharaja">
             <p class="des-sinharaja"> inharaja Rainforest, located in the southwest corner of Sri Lanka, is a <mark>UNESCO World Heritage</mark>  Site and one of the <u>island's last remaining expanses of tropical rainforest</u>. Spanning an area of approximately <b>11,187 hectares</b> , Sinharaja is a biodiversity hotspot, boasting an incredible array of endemic flora and fauna found nowhere else on earth. The forest's name, which translates to <b>"Lion Kingdom"</b>  evokes its status as a sanctuary for the majestic Sri Lankan lion, now extinct on the island. Sinharaja is a haven for nature enthusiasts and researchers alike, offering opportunities to discover rare species of 
                 <ul>
                     <li>plants</li>
@@ -22,27 +22,7 @@
                 </ul> within its dense canopy and lush undergrowth. Trekking through Sinharaja, visitors are immersed in a world of towering trees, cascading waterfalls, crystal-clear streams, and a symphony of birdcalls, making it a paradise for eco-tourism and ecologically sustainable practices. Efforts to preserve Sinharaja Rainforest are ongoing, with conservation initiatives aimed at protecting its rich biodiversity, maintaining vital ecosystems, and promoting responsible tourism practices to ensure its splendor endures for generations to come.</p>
         </div>
         <div>
-            <style>
-                table {
-                     width: 70%;
-                    border-collapse: collapse;
-                    border: 2px solid;
-                    margin-left: 15%;
-                    margin-top: 5%;
-                    font-size: large;
-                }
-
-                th, td {
-                     padding: 8px;
-                     text-align: left;
-                     border-bottom: 1px solid black;
-                     border-right: 1px solid
-                 }
-
-                 th {
-                     background-color: lightblue;
-                }
-            </style>
+        
 
 <table>
     <tr>
