--- a/ambuluwawa.html
+++ b/ambuluwawa.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ambuluwawa Tower</title>
     <link rel="stylesheet" href="/css/Ambuluwawa.css">
-    <link rel="icon" href="assest/tower.png">
+    <link rel="icon" href="/assest/icons/tower.png">
 </head>
     <div id="Ambuluwawa Tower">
        <div class="Heading">
             <h1>Ambuluwawa Tower</h1>
-            <img src="/assest/AmbuluwawaCover.jpg" >
+            <img src="/assest/images/AmbuluwawaCover.jpg" >
             <h4>mbuluwawa Tower, perched atop the Ambuluwawa mountain range near Gampola in Sri Lanka, is a distinctive architectural marvel that offers a unique blend of religious, cultural, and natural elements.</h4>
             <ul>
                 <li><h2><b>Iconic Landmark</b></h2></li>
@@ -30,6 +30,5 @@
          <br> <br> 011 2525254 / 0758798514 </p>
     </div>
 <body>
-    
 </body>
 </html>
