--- a/ellaRock.html
+++ b/ellaRock.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella Rock</title>
     <link rel="stylesheet" href="/css/EllaRock.css">
-    <link rel="icon" href="assest/hill.png">
+    <link rel="icon" href="assest/icons/hill.png">
 </head>
     <div id="EllaRock">
         <div class="Heading">
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="ellaRock-img">
-            <img src="" >
+            <img src="/assest/images/EllaRockDestination.jpg" >
         </div>
     </div>
     <div class="copyright">
