--- a/galleFort.html
+++ b/galleFort.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galle Fort</title>
     <link rel="stylesheet" href="/css/GalleFort.css">
-    <link rel="icon" href="assest/fortress.png">
+    <link rel="icon" href="assest/icons/fortress.png">
 </head>
     <div id="GalleFort">
         <div class="Heading" >
@@ -33,7 +33,7 @@
             </ul>
         </div>
         <div class="gf-img">
-            <img src="assest/GalleFortCollage.jpg" >
+            <img src="assest/images/GalleFortCollage.jpg" >
         </div>
     </div>
     <div class="copyright">
