--- a/Yala.html
+++ b/Yala.html
@@ -5,35 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YalaNationalPark</title>
     <link rel="stylesheet" href="/css/Yala.css">
-    <link rel="icon" href="assest/icons8-elephant-50.png">
+    <link rel="icon" href="assest/icons/icons8-elephant-50.png">
 </head>
 <body>
     <div id="Yala">
         <div class="Heading">
             <h1 class="title 1">Yala National Park</h1>
-            <img src="assest/yala cover.jpg" class="IMG-YALA">
+            <img src="assest/images/yala cover.jpg" class="IMG-YALA">
 
-        <style>
-              table {
-                 width: 80%;
-                 border-collapse: collapse;
-                 border: 2px solid;
-                 margin-left: 6%;
-                 margin-top: 5%;
-                 font-size: large;
-             }
-
-                th, td {
-                     padding: 8px;
-                     text-align: left;
-                     border-bottom: 1px solid black;
-                     border-right: 1px solid
-                 }
-
-             th {
-                 background-color: lightblue;
-             }
-      </style>
 
 <table>
     <tr>
